language.bnf
<Program> ::= <Stmt>+

<Stmt> ::= <Val> | "Print" <Expr> "\n"

<Val> ::= <Identify> "=" <Expr>

<Expr> ::= <Term> (("+" | "-") <Term>)*

<Term> ::= <Factor> (("*" | "/") <Factor>)*

<Factor> ::= <Primary> | <Identify>

<Identify> ::= [a-zA-Z_][a-zA-Z0-9_]*

<Primary> ::= <Number>

<Number> ::= [1-9][0-9]*

<Whitespace> ::= [ \t\n\r]*
